--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,5 @@ spring.jpa.show-sql=true
 spring.freemarker.expose-request-attributes=true
 
 upload.path=/home/username/tmp/sweater
+site.address=http://localhost:10000/
 
