Add dependency and config of mails

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.freemarker.expose-request-attributes=true
 upload.path=/home/username/tmp/sweater
 site.address=http://localhost:10000/
 
+spring.mail.host=smtp.gmail.com
+spring.mail.username=
+spring.mail.password=
+spring.mail.port=465
+spring.mail.protocol=smtps
+mail.debug=false
