--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sweater?useUnicode=true&useJDB
 spring.datasource.username=
 spring.datasource.password=
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 spring.freemarker.expose-request-attributes=true
@@ -18,3 +18,5 @@ spring.mail.password=
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=false
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
